# pyCoursePlaner

./: LICENSE.txt  README.rst  setup.cfg  tox.ini
src/pyCoursePlaner/: dnd_res.py  tk_scroll.py  ui.py
