[metadata]
name = <pyCoursePlaner>
version = <0.0.1>
license = <MIT>
description = <A simple college course planner>
long_description = file: README.rst
author = <Uwe Knopf, leon-ma08>
author_email = <Optional: author e-mail>
classifiers=
   <Topic :: Home Automation>
   <Topic :: Education>
   <Topic :: Database>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <pysimplegui> #packages for pip to install
   

[options.packages.find]
where=src